WIP: Add e2e spec for wc in Block-to-Text mode
This adds a new e2e spec which loads the web component with its
attributes set to mimic the usage by Block-to-Text alpha app [1,2].

* The `assets_identifier` attribute is set to load the assets (but not
  the code) from the "encoded-art-starter" project which includes a
  `moon.png` image.
* The `host_styles` attribute is set partly because it is used by the
  Block-to-Text app, but also because otherwise the output-only editor
  has zero height in the Electron browser used by default by Cypress.
* The `code` attribute is set to load a simple P5 sketch which draws the
  word "PASS" in green and draws the `moon.png` image on the canvas.
* The `output_only` attribute is set to `true` so that only the output
  pane of the editor is displayed; not the code editor, the run bar,
  etc.
* The `output_panels` attribute is set to `["visual"]` so that only the
  visual output canvas is displayed; not the text output.
* A "Run code" button has been added to `src/web-component.html` to
  mimic a similar button in the Block-to-Text app which has an `onclick`
  handler to call the `rerunCode` method on the web component.

Note that the "embedded-viewer" CSS class that we're asserting against
is added by the `WebComponentProject` component around the `Output`
component; not by the `EmbeddedViewer` component which is currently only
used via the `/:locale/embed/viewer/:identifier` route which is used in
an iframe by e.g. the Projects app.

By asserting the results contain '{"errorDetails":{}}' we can have some
confidence that the P5 sketch code has run successfully.

TODO:
* Do we need to set the `embedded` attribute to `true` like the
  Block-to-Text app? It seems unnecessary.
* The drawing of the `moon.png` image doesn't seem to work at all in
  Electron or Chrome and only patchily in Firefox (and even then only
  when caching is not disabled). Does this highlight an actual problem?
* If `assets_identifier` is not set, the spec doesn

--- a/src/web-component.html
+++ b/src/web-component.html
@@ -76,7 +76,17 @@
         document.getElementById("results").innerText = JSON.stringify(e.detail);
       });
 
-      document.getElementsByTagName("body")[0].prepend(webComp);
+      const body = document.getElementsByTagName("body")[0];
+      body.prepend(webComp);
+
+      const runButton = document.createElement("button");
+      const runButtonText = document.createTextNode("Run code");
+      runButton.appendChild(runButtonText);
+      runButton.onclick = (event) => {
+        const webComponent = document.querySelector("editor-wc");
+        webComponent.rerunCode();
+      }
+      body.append(runButton);
     });
   </script>
 </html>
