lint and remove final env vars from build files

--- a/src/web-component.html
+++ b/src/web-component.html
@@ -43,6 +43,7 @@
       // sidebar
       webComp.setAttribute("with_projectbar", "true");
       webComp.setAttribute("with_sidebar", "true");
+      webComp.setAttribute("react_app_api_endpoint", "https://test-editor-api.raspberrypi.org");
       webComp.setAttribute(
         "sidebar_options",
         JSON.stringify([
