fix: add material symbols font to web component page

--- a/src/web-component.html
+++ b/src/web-component.html
@@ -29,6 +29,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
     <title>Editor Web component</title>
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Sharp:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
+    />
   </head>
   <body>
     <p id="results"></p>
@@ -52,7 +56,7 @@
           "download",
           "settings",
           "info",
-        ]),
+        ])
       );
 
       // Pre-set the code attribute with an empty string.
@@ -89,7 +93,7 @@
       runButton.appendChild(runButtonText);
       runButton.onclick = (event) => {
         webComp.rerunCode();
-      }
+      };
       body.append(runButton);
     });
   </script>
