Set up a sample scratch project and render it
This is just an empty project for now

We've chosen to use 'code_editor_scratch' rather than just 'scratch' as the project identifier so we don't conflict with the existing experience cs scratch.

I've chosen to use srcDoc to embed the iframe to avoid the need of serving the contents of the iframe. If we want
the iframe to be in the same domain as the project, the project including the web component would need to serve it.

As far as I can tell, srcDoc doesn't have any limitations that would affect us, but if it does we have alternatives:

+ Set up an a page that can host the iframe contents in each project that wants to use Scratch
+ Permanently hosting the iframe contents at a known subdomain, e.g. code-editor-scratch.raspberrypi.org and handling the complexities of cross domain iframes.

--- a/src/web-component.html
+++ b/src/web-component.html
@@ -63,6 +63,7 @@
       <a href="#" data-project="cool-html">cool-html</a>
       <a href="#" data-project="blank-python-starter">blank-python-starter</a>
       <a href="#" data-project="cool-python">cool-python</a>
+      <a href="#" data-project="blank-scratch">blank-scratch</a>
     </div>
     <div id="editor-component"></div>
     <p id="results"></p>
