Improve the look of editor preview
Use the with_editor_styles setting by default.

The editor looks broken without these styles - items with poor contrast and elements without the correct padding.

In the longer term we may want to have a simpler 'default' styling that looks good.

As before you can still configure use_editor_styles it by using a URL param if you want to see the editor without styles.

--- a/src/web-component.html
+++ b/src/web-component.html
@@ -101,6 +101,7 @@
         
         newWebComp.setAttribute("with_projectbar", "true");
         newWebComp.setAttribute("with_sidebar", "true");
+        newWebComp.setAttribute("use_editor_styles", "true");
         newWebComp.setAttribute(
           "sidebar_options",
           JSON.stringify([
