Make the test page work whatever the host
I made set up my projects locally to be served from *.rpfdev.com and this was a small thing that caused me some confusing by sending me back to the wrong host.

--- a/public/index.html
+++ b/public/index.html
@@ -1,4 +1,4 @@
 <h1>You may be looking for...</h1>
 <ul>
-  <li>Web Component test page <a href="http://localhost:3011/web-component.html">http://localhost:3011/web-component.html</a></li>
+  <li>Web Component test page <a href="/web-component.html">/web-component.html</a></li>
 </ul>
